--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 deprec-core changelog
 =====================
 
+= 3.1.8  (Jul 28, 2011)
+
+  * Moved rubygem deps from deprec to deprec-core
+
 = 3.1.7  (Jul 22, 2011)
 
   * Added TEMPLATE_LOAD_PATH
