--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,10 @@ deprec-core changelog
 
 = 3.1.13  (Aug  2, 2011)
 
+  * Don't set :user.
+
+= 3.1.13  (Aug  2, 2011)
+
   * Only run 'apt-get update' once per capistrano run
 
 = 3.1.12  (Jul 30, 2011)
